tests/neg-custom-args/captures/simple-using.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/simple-using.scala:8:17 ----------------------------------
8 |  usingLogFile { f => () => f.write(2) } // error
  |                 ^^^^^^^^^^^^^^^^^^^^^
  |Capability `f` outlives its scope: it leaks into outer capture set 's1 which is owned by method test.
  |The leakage occurred when trying to match the following types:
  |
  |Found:    (f: java.io.FileOutputStream^'s2) ->'s3 () ->{f} Unit
  |Required: java.io.FileOutputStream^ => () ->'s1 Unit
  |
  |where:    => refers to a root capability created in method test when checking argument to parameter op of method usingLogFile
  |          ^  refers to the root capability caps.any
  |
  | longer explanation available when compiling with `-explain`
